# backend/routes/index.js
@@ -1,10 +1,11 @@
 const router = require('express').Router();
 
 router.get('/', (req, res) => {
-  res.send('Welcome to the API.');
+  res.send('Welcome to the Jewelry store');
 });
 
 router.use('/api-docs', require('./swagger'));
-router.use('/professional', require('./professional'));
+router.use('/jewelry', require('./jewelry'));
+router.use('/stones', require('./stones'));
 
 module.exports = router;
