# backend/swagger-output.json
@@ -1,18 +1,41 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "User API",
-    "description": "API for managing users",
+    "title": "Jewelry Store API",
+    "description": "API for jewelry store items",
     "version": "1.0.0"
   },
-  "host": "cse341-node-ofy0.onrender.com",
+  "host": "localhost:8081",
   "basePath": "/",
-  "schemes": ["https"],
+  "schemes": [
+    "http",
+    "https"
+  ],
   "paths": {
-    "/professional": {
+    "/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api-docs/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/jewelry/": {
       "get": {
         "tags": [
-          "Users"
+          "Jewelry"
         ],
         "description": "",
         "produces": [
@@ -21,12 +44,15 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "post": {
         "tags": [
-          "Users"
+          "Jewelry"
         ],
         "description": "",
         "parameters": [
@@ -36,19 +62,31 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "title": {
                   "example": "any"
                 },
-                "lastName": {
+                "type": {
                   "example": "any"
                 },
-                "email": {
+                "price": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "material": {
                   "example": "any"
                 },
-                "birthday": {
+                "stone": {
+                  "example": "any"
+                },
+                "stoneId": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "handmade": {
+                  "example": "any"
+                },
+                "inStock": {
                   "example": "any"
                 }
               }
@@ -65,10 +103,10 @@
         }
       }
     },
-    "/professional/{id}": {
+    "/jewelry/{id}": {
       "get": {
         "tags": [
-          "Users"
+          "Jewelry"
         ],
         "description": "",
         "parameters": [
@@ -87,7 +125,7 @@
       },
       "put": {
         "tags": [
-          "Users"
+          "Jewelry"
         ],
         "description": "",
         "parameters": [
@@ -103,19 +141,31 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "title": {
                   "example": "any"
                 },
-                "lastName": {
+                "type": {
                   "example": "any"
                 },
-                "email": {
+                "price": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "material": {
                   "example": "any"
                 },
-                "birthday": {
+                "stone": {
+                  "example": "any"
+                },
+                "stoneId": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "handmade": {
+                  "example": "any"
+                },
+                "inStock": {
                   "example": "any"
                 }
               }
@@ -133,7 +183,167 @@
       },
       "delete": {
         "tags": [
-          "Users"
+          "Jewelry"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/stones/": {
+      "get": {
+        "tags": [
+          "Stones"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Stones"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "color": {
+                  "example": "any"
+                },
+                "origin": {
+                  "example": "any"
+                },
+                "chakra": {
+                  "example": "any"
+                },
+                "meaning": {
+                  "example": "any"
+                },
+                "element": {
+                  "example": "any"
+                },
+                "property": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/stones/{id}": {
+      "get": {
+        "tags": [
+          "Stones"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Stones"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "color": {
+                  "example": "any"
+                },
+                "origin": {
+                  "example": "any"
+                },
+                "chakra": {
+                  "example": "any"
+                },
+                "meaning": {
+                  "example": "any"
+                },
+                "element": {
+                  "example": "any"
+                },
+                "property": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Stones"
         ],
         "description": "",
         "parameters": [
